--- a/CabinetMedicalFrontEnd/src/app/components/navbar/navbar.component.html
+++ b/CabinetMedicalFrontEnd/src/app/components/navbar/navbar.component.html
@@ -38,14 +38,20 @@
               </a>
             </li>
             
-            <li class="nav-item">
-              <a class="nav-link" href="#">
-                <i class="now-ui-icons users_single-02"></i>
-                <p>
-                  <span class="d-lg-none d-md-block">Account</span>
-                </p>
-              </a>
-            </li>
+              <li class="nav-item" ngbDropdown>
+                <a class="nav-link" id="dropdownBasic1" ngbDropdownToggle>
+                  <i class="now-ui-icons users_single-02"></i>
+                  <p>
+                    <span class="d-lg-none d-md-block">Profile </span>
+                  </p>
+                </a>
+                <div class="dropdown-menu dropdown-menu-right" ngbDropdownMenu aria-labelledby="dropdownBasic1">
+                  <a class="dropdown-item"routerLinkActive="active text-primary"
+                  [routerLink]="['user-profile']">Profile</a>
+                  <a class="dropdown-item" href="#">Edit Profile</a>
+                   <a class="dropdown-item" href="#">Log out</a>
+                </div>
+              </li>
           </ul>
         </div>
     </div>
