--- a/CabinetMedicalFrontEnd/src/app/gererpatients/gererpatients.component.html
+++ b/CabinetMedicalFrontEnd/src/app/gererpatients/gererpatients.component.html
@@ -8,18 +8,13 @@
           <h5 class="title">Patients </h5>
         </div>
         <div class="card-body">
-          <form>
+          <form #formulaire="ngForm">
             <div class="row">
               <div class="col-md-4 pr-1">
-               
+
               </div>
-              <div class="col-md-4 px-1">
-                <div class="form-group">
-                  <label>Id Patient</label>
-                  <input type="text" class="form-control"  >
-                </div>
-              </div>
-            
+
+
             </div>
             <div class="row">
               <div class="col-md-6 pr-1">
@@ -33,12 +28,20 @@
                   <label>prénom</label>
                   <input type="text" class="form-control"  >
                 </div>
+
               </div>
-            
-              <div class="col-md-12">
+
+              <div class="col-md-6">
                 <div class="form-group">
                   <label>Date Naissance</label>
                   <input type="date" class="form-control"  >
+                </div>
+                </div>
+                <div class="col-md-6">
+                <div class="form-group">
+                  <label>Sexe</label> <br>
+                  <input type ="radio"> Femme
+                  <input type="radio" > Homme
                 </div>
               </div>
               <div class="col-md-12">
@@ -47,17 +50,29 @@
                   <input type="text" class="form-control" >
                 </div>
               </div>
-              
-              <div class="col-md-12">
+
+              <div class="col-md-6">
                 <div class="form-group">
                   <label>Numéro de téléphone</label>
                   <input type="number" class="form-control" >
                 </div>
+
+
+              <div class="form-group">
+                <label>Mutuelle </label> <br>
+                <label>  Avez vous assurance ?</label> <br>
+                <input type ="radio"> Oui
+                <input type="radio" > Non
+
+
               </div>
             </div>
-               
+</div>
+
       <div class="text-right">
-        <button  type="button" class="btn btn-primary" id="btn"> Enregistrer </button> 
+        <button  [disabled]="formulaire.invalid"
+
+        (click)="addPatient(formulaire)" class="btn btn-primary" id="btn"> Enregistrer </button>
 
       </div>
 
@@ -69,7 +84,7 @@
                    Id Patient
                   </th>
                   <th>
-                    Nom 
+                    Nom
                   </th>
                   <th>
                    Prénom
@@ -77,12 +92,18 @@
                   <th>
                    Date de Naissance
                   </th>
-                
+                  <th>
+                    Sexe
+                  </th>
                   <th>
                     Adresse
                   </th>
                   <th>
                     Numéro de téléphone
+                  </th>
+
+                  <th>
+                    Mutuelle
                   </th>
                   <th class="text-right">
                     Consultation
@@ -105,27 +126,30 @@
                     <td >
                       19-11-1997
                     </td>
-                  
+                    <td>
+                      femme
+                  </td>
                     <td>
                      Beja
                     </td>
                     <td>
                         +216 98741256
                     </td>
+
+                  <td>
+                    Non
+                </td>
                     <td>
-                        <button class="btn primary"id ="consulter">Consulter</button>
+                       <a routerLinkActive="active text-primary"
+                          [routerLink]="['gereconsultation']"> Consultation</a>
 
                     </td>
                     <td> <button class="btn primary" id="update"> Update </button></td>
                   </tr>
-                 
-                  
+
+
                 </tbody>
               </table>
             </div>
           </div>
         </form>
-
-          
-
-          
