--- a/CabinetMedicalFrontEnd/src/app/gereconsultation/gereconsultation.component.html
+++ b/CabinetMedicalFrontEnd/src/app/gereconsultation/gereconsultation.component.html
@@ -8,17 +8,13 @@
           <h5 class="title"> Consultation</h5>
         </div>
         <div class="card-body">
-          <form>
+          <form #formulaire="ngForm">
             <div class="row">
               <div class="col-md-4 pr-1">
-               
+
               </div>
-              <div class="col-md-2 px-1">
-                <div class="form-group">
-                  <label>id Consultation</label>
-                  <input type="text" class="form-control"  >
-                </div>
-              </div>
+
+
               <div class="col-md-4 pl-1">
                 <div class="form-group">
                   <label >date viste </label>
@@ -29,22 +25,17 @@
             <div class="row">
               <div class="col-md-6 pr-1">
                 <div class="form-group">
-                  <label>Nom</label>
+                  <label>Nom Patient</label>
                   <input type="text" class="form-control"  >
                 </div>
               </div>
-              <div class="col-md-6 pl-1">
-                <div class="form-group">
-                  <label>prénom</label>
-                  <input type="text" class="form-control"  >
-                </div>
-              </div>
+
             </div>
             <div class="row">
               <div class="col-md-12">
                 <div class="form-group">
-                  <label>Addresse</label>
-                  <input type="text" class="form-control"  >
+                  <label>Maladie </label>
+                  <input type="textarea" class="form-control"  >
                 </div>
               </div>
             </div>
@@ -56,12 +47,14 @@
                 </div>
               </div>
             </div>
-                        
+
             <div class="text-right">
-              <button  type="button" class="btn btn-primary" id="btn"> Enregistrer </button> 
+              <button [disabled]="formulaire.invalid"
+
+              (click)="addConsultation(formulaire)" class="btn btn-primary" id="btn"> Enregistrer </button>
             </div>
-    
-    
+
+
     <div class="card-body">
       <div class="table-responsive">
         <table class="table">
@@ -78,14 +71,14 @@
             <th>
            Prénom
             </th>
-            
+
             <th>
             Description
             </th>
             <th>
-            Action 
+            Action
             </th>
-           
+
           </thead>
           <tbody>
             <tr>
@@ -96,7 +89,7 @@
                 14-04-2021
               </td>
               <td>
-                kouki 
+                kouki
               </td>
               <td >
                 siwar
@@ -107,10 +100,10 @@
               <td>
                 <button class="btn primary" id="update"> Modifier </button>
                </td>
-            
+
             </tr>
-           
-            
+
+
           </tbody>
         </table>
       </div>
