--- a/CabinetMedicalFrontEnd/src/app/medicament/medicament.component.html
+++ b/CabinetMedicalFrontEnd/src/app/medicament/medicament.component.html
@@ -2,13 +2,13 @@
 </div>
 <div class="main-content">
     <div class="row">
-        <div class="col-md-14">
+        <div class="col-md-12">
       <div class="card">
         <div class="card-header">
           <h5 class="title">Pharmacie  </h5>
         </div>
         <div class="card-body">
-            <form>
+            <form #formulaire="ngForm">
               <div class="row">
                 <div class="col-md-4 pr-1">
 
@@ -68,78 +68,13 @@
               </div>
 
               <div class="text-right">
-                <button  type="button" class="btn btn-primary" id="btn"> Enregistrer </button>
+                <button  [disabled]="formulaire.invalid"
+
+                (click)="addMedicament(formulaire)" class="btn btn-primary" id="btn"> Enregistrer </button>
               </div>
 
 
-      <div class="card-body">
-        <div class="table-responsive">
-          <table class="table">
-            <thead class=" text-primary">
-              <th>
-               Id Médicament
-              </th>
-              <th>
-                Nom Médicament
-              </th>
-              <th>
-                Code
-              </th>
-              <th>
-             Forme
-              </th>
-              <th>
-              Dosage
-              </th>
-              <th>
-                Quantité
-                </th>
-                <th>
-                 Utilisarion
-                  </th>
-              <th>
-              Action
-              </th>
 
-            </thead>
-            <tbody>
-              <tr>
-                <td>
-                01235
-                </td>
-                <td>
-                  Gripex
-                </td>
-                <td>
-                  619784563
-                </td>
-                <td >
-                  GLES
-                </td>
-                <td>
-                  50MG/4MG
-                </td>
-                <td>
-                  Générique
-                  </td>
-                  <td>
-                    22
-                    </td>
-                    <td>
-                     3 fois/jour
-                      </td>
-                <td>
-                  <button class="btn primary" id="update"> Modifier </button>
-                  <button class="btn primary" id="update"> Supprimer  </button>
-                 </td>
-
-              </tr>
-
-
-            </tbody>
-          </table>
-        </div>
-      </div>
     </form>
   </div>
         </div>
