--- a/src/app/effetsecondaire/effetsecondaire.component.html
+++ b/src/app/effetsecondaire/effetsecondaire.component.html
@@ -1,1 +1,50 @@
-<p>effetsecondaire works!</p>
+
+<div class="panel-header panel-header-sm">
+</div>
+<div class="main-content">
+  <div class="row">
+    <div class="col-md-12">
+      <div class="card">
+        <div class="card-header">
+          <h5 class="title">Les EffetSecondaires</h5>
+        </div>
+        <div class="card-body">
+          <form #formulaire="ngForm">
+            <div class="row">
+              <div class="col-md-4 pr-1">
+
+              </div>
+
+
+            </div>
+            <div class="row">
+              <div class="col-md-6 pr-1">
+                <div class="form-group">
+                  <label>Nom</label>
+                  <input type="text" class="form-control"  >
+                </div>
+              </div>
+              <div class="col-md-6 pl-1">
+                <div class="form-group">
+                  <label>Remarques</label>
+                  <input type="text" class="form-control"  >
+                </div>
+
+              </div>
+
+           
+             
+            
+
+</div>
+
+      <div class="text-right">
+        <button  [disabled]="formulaire.invalid"
+
+        (click)="addEffetSecondaire(formulaire)" class="btn btn-primary" id="btn"> Enregistrer </button>
+
+      </div>
+
+         
+        </form>
+
